[gd_scene load_steps=2 format=3 uid="uid://d0dckf7v3wwxj"]

[ext_resource type="Script" path="res://ui/SettingsMenu/settings.gd" id="1_nwlyx"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_nwlyx")

[node name="SettingsElements" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 854.5
offset_top = 436.5
offset_right = 1065.5
offset_bottom = 587.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MusicText" type="RichTextLabel" parent="SettingsElements"]
layout_mode = 2
text = "Music"
fit_content = true
scroll_active = false

[node name="MusicSlider" type="HSlider" parent="SettingsElements"]
layout_mode = 2
min_value = -24.0
max_value = 0.0
value = -4.0

[node name="SFXText" type="RichTextLabel" parent="SettingsElements"]
layout_mode = 2
size_flags_vertical = 4
text = "Effects"
fit_content = true
scroll_active = false

[node name="SFXSlider" type="HSlider" parent="SettingsElements"]
layout_mode = 2
min_value = -24.0
max_value = 0.0
value = -4.0

[node name="BackToMenuButton" type="Button" parent="SettingsElements"]
layout_mode = 2
text = "Back to menu"

[connection signal="value_changed" from="SettingsElements/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsElements/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="SettingsElements/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
